Add JS portion: Change logo filter when clicked

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 
 
         <aside class="secondary">
-            <img src="chrome://branding/content/about-logo@2x.png" alt="firefox logo">
+            <img id="logo" src="chrome://branding/content/about-logo@2x.png" alt="firefox logo">
         </aside>
     </main>
 
 </body>
+<script src="scripts/script.js"></script>
 </html>
